# VoiceLite

./: .gitignore  .vercelignore  3_DAY_AUDIT_COMPLETE_SUMMARY.md  AGENTS.md  ALL_CRITICAL_FIXES_COMPLETE.md  ALL_FIXES_COMPLETE_SUMMARY.md  ANALYTICS_RECOMMENDATION.md  ANALYTICS_SETUP_GUIDE.md  ANTIVIRUS_ACTION_PLAN.md  ANTIVIRUS_FALSE_POSITIVE_SUBMISSION.md  ARCHITECTURE.md  ARCHITECTURE_DISCOVERED.md  ARCHITECTURE_REFACTOR_PROGRESS.md  ARCHITECTURE_REVIEW_2025.md  AST_GREP_EXAMPLES.md  AUDIT_FINAL_REPORT.md  AUDIT_RECONCILIATION.md  BACKEND_AUDIT_REPORT.json  BACKEND_AUDIT_REPORT.md  BASEMENT_HUSTLE_LLC_PAGE.md  BUGS_FOUND.md  BUG_AUDIT_REPORT.md  BUG_FIXES_APPLIED.md  BUG_FIX_REVIEW.md  BUG_SCAN_REPORT_2025-01-04.md  CHANGELOG  CHANGELOG.md  CHANGELOG_v1.0.9.md  CLAUDE.md  CLAUDE_CODE_OPTIMIZATION_GUIDE.md  CLEANUP_COMPLETE.md  CLEAN_AND_CREATE_TABLES.sql  CLEAN_GIT_HISTORY.bat  CODEBASE_AUDIT_REPORT.md  CODE_QUALITY_FIXES.md  CODE_SIGNING_SETUP.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_2025-10-18.md  COMPREHENSIVE_CLUTTER_AUDIT.md  COMPREHENSIVE_SECURITY_AUDIT_2025-10-18.md  (+264 more)
voicelite-tauri/src-tauri/: Cargo.toml  tauri.conf.json
voicelite-tauri/src-tauri/capabilities/: default.json
voicelite-tauri/src-tauri/src/: cli.rs  lib.rs  llm_client.rs  main.rs  settings.rs  state.rs  tray.rs
voicelite-tauri/src-tauri/src/audio/: mod.rs  recorder.rs  vad.rs
voicelite-tauri/src-tauri/src/commands/: audio.rs  mod.rs  settings.rs  transcription.rs
voicelite-tauri/src-tauri/src/input/: clipboard.rs
voicelite-tauri/src-tauri/src/managers/: history.rs  (+6 more)
(+854 files in other folders)
