[package]
name = "voicelite-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "voicelite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core + plugins
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

# Type-safe IPC
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# Audio
cpal = "0.16"

# Transcription
whisper-rs = "0.12"

# VAD
ort = { version = "=2.0.0-rc.11" }
ndarray = "0.16"

# Input injection
arboard = "3"
enigo = "0.6"

# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
